# MasterMind

./: .gitignore  CMakeLists.txt  README.md  alg_gen  kolor.cpp  kolor.h  main.cpp  makefile  osobnik.cpp  osobnik.h  osobnik.hpp  populacja.cpp  populacja.h  zmienne_globalne.h
readme/: colors.py  rounds.py
src/: CMakeLists.txt  Color.cpp  Color.hpp  DefaultCrossing.cpp  DefaultCrossing.hpp  DefaultCrossover.cpp  DefaultCrossover.hpp  DefaultMutation.hpp  DefaultSelection.cpp  DefaultSelection.hpp  FitnessCalculator.cpp  FitnessCalculator.hpp  GeneticAlgorithm.cpp  GeneticAlgorithm.hpp  Grade.cpp  IAlleles.cpp  IAlleles.hpp  ICrossingStrategy.hpp  ICrossoverStrategy.hpp  IMutationStrategy.hpp  ISelectionStrategy.hpp  Individual.cpp  Individual.hpp  IndividualBase.hpp  IndividualTwoAlleles.cpp  IndividualTwoAlleles.hpp  Population.cpp  Population.hpp  Probabilistic.cpp  Probabilistic.hpp  check.hpp  globals.hpp  kolor.cpp  main.cpp  osobnik.cpp  osobnik.hpp  populacja.cpp  populacja.hpp
src/alleles/: DefaultAlleles.cpp  DefaultAlleles.hpp  IAlleles.hpp
src/crossover/: DefaultCrossover.cpp  DefaultCrossover.hpp  ICrossoverStrategy.hpp
src/exceptions/: AllelesSizeToSmallException.hpp  PopulationSizeNotEvenException.hpp  PopulationSizeToSmallException.hpp
src/individual/: Individual.cpp  Individual.hpp  IndividualBase.cpp  IndividualBase.hpp  IndividualTwoAlleles.cpp  IndividualTwoAlleles.hpp
src/mutation/: DefaultMutation.cpp  DefaultMutation.hpp  IMutationStrategy.hpp
src/selection/: DefaultSelection.cpp  DefaultSelection.hpp  ISelectionStrategy.hpp
tests/mocks/: ProbabilisticMock.cpp  ProbabilisticMock.hpp
tests/src/: DefaultCrossingTest.cpp  DefaultCrossoverTest.cpp  DefaultMutationTest.cpp  DefaultSelectionTest.cpp  FitnessCalculatorTest.cpp  GeneticAlgorithmTest.cpp  IndividualTest.cpp  ProbabilisticTest.cpp
tests/src/crossover/: DefaultCrossoverTest.cpp
tests/src/individual/: IndividualTest.cpp
tests/src/mutation/: DefaultMutationTest.cpp
tests/src/problems/: CosTest.cpp  LocalMaxTest.cpp  QuadraticFunction1DTest.cpp  QuadraticFunction2DTest.cpp  QuadraticFunctionTest.cpp  SimpleQuadraticFunctionTest.cpp  TwoEqualMaxTest.cpp
tests/src/selection/: DefaultSelectionTest.cpp
tests/stubs/: Probabilistic.cpp
tests/testables/: DefaultAllelesTestable.hpp  DefaultMutationTestable.hpp
tests/utils/: DecodeFromBinary.cpp  DecodeFromBinary.hpp  FitnessFunctions.cpp  FitnessFunctions.hpp  Individuals.cpp  Individuals.hpp  PrintAlleles.cpp  PrintAlleles.hpp
